tests/parse_print/random_perturb/enum_liberated/change-08/stderr.expected
Error:
    tests/parse_print/random_perturb/enum_liberated/change-08/change-08.essence:1:10:
  |
1 | language Essen`e 1.3
  |          ^^^^^
Syntax Error: Not a valid language name

tests/parse_print/random_perturb/enum_liberated/change-08/change-08.essence:1:15:
  |
1 | language Essen`e 1.3
  |               ^^^^^^
Skipped tokens
